--- a/$RECYCLE.BIN/S-1-5-21-3620790535-1151712844-1154384334-1001/$RP5ONQ7/hatran.html
+++ b/$RECYCLE.BIN/S-1-5-21-3620790535-1151712844-1154384334-1001/$RP5ONQ7/hatran.html
@@ -5,10 +5,11 @@
 	<tit>Hello</title>
 </head>
 <body>
+	<h1>thenudit</h1>
+	<h2>hjkhkjgjkgk</h2>
 	<button type="button" onclick="showMessage();">Click Me!</button>
-<script>
-function showMessage(){
-    alert('Xin chào!');
+<script language="javaScript"   src="hatran11/js.js">
+
 }
 </script>
 </body>
